--- a/newProfessordialog.ui
+++ b/newProfessordialog.ui
@@ -29,15 +29,19 @@
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>40</x>
+     <x>27</x>
      <y>110</y>
-     <width>258</width>
+     <width>281</width>
      <height>227</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
-     <widget class="QTableWidget" name="grdAvailability"/>
+     <widget class="QTableWidget" name="grdAvailability">
+      <property name="focusPolicy">
+       <enum>Qt::StrongFocus</enum>
+      </property>
+     </widget>
     </item>
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_2">
