Added some backgorund pictures and title

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>MainWindow</class>
  <widget class="QMainWindow" name="MainWindow">
+  <property name="enabled">
+   <bool>true</bool>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -14,12 +17,12 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>80</x>
-      <y>250</y>
-      <width>188</width>
+      <x>100</x>
+      <y>230</y>
+      <width>391</width>
       <height>27</height>
      </rect>
     </property>
@@ -40,12 +43,12 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>80</x>
-      <y>290</y>
-      <width>289</width>
+      <x>100</x>
+      <y>270</y>
+      <width>391</width>
       <height>27</height>
      </rect>
     </property>
@@ -72,6 +75,28 @@
       </widget>
      </item>
     </layout>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>120</x>
+      <y>90</y>
+      <width>361</width>
+      <height>111</height>
+     </rect>
+    </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="textFormat">
+     <enum>Qt::AutoText</enum>
+    </property>
+    <property name="pixmap">
+     <pixmap>title.png</pixmap>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
