--- a/professorsdialog.ui
+++ b/professorsdialog.ui
@@ -13,7 +13,7 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>0</x>
@@ -41,6 +41,17 @@
      <layout class="QHBoxLayout" name="horizontalLayout_3">
       <item>
        <widget class="QPushButton" name="btnConsult">
+        <property name="styleSheet">
+         <string notr="true">background-color: rgb(11, 117, 250);
+border-style: outset;
+border-width: 2px;
+border-radius: 10px;
+border-color: beige;
+font: bold 14px;
+color: white;
+min-width: 10em;
+padding: 6px;</string>
+        </property>
         <property name="text">
          <string>Consultar disponibilidad</string>
         </property>
@@ -48,6 +59,17 @@
       </item>
       <item>
        <widget class="QPushButton" name="btnNew">
+        <property name="styleSheet">
+         <string notr="true">background-color: rgb(11, 117, 250);
+border-style: outset;
+border-width: 2px;
+border-radius: 10px;
+border-color: beige;
+font: bold 14px;
+color: white;
+min-width: 10em;
+padding: 6px;</string>
+        </property>
         <property name="text">
          <string>Nuevo profesor</string>
         </property>
@@ -59,6 +81,17 @@
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <item>
        <widget class="QPushButton" name="btnModify">
+        <property name="styleSheet">
+         <string notr="true">background-color: rgb(11, 117, 250);
+border-style: outset;
+border-width: 2px;
+border-radius: 10px;
+border-color: beige;
+font: bold 14px;
+color: white;
+min-width: 10em;
+padding: 6px;</string>
+        </property>
         <property name="text">
          <string>Modificar Datos</string>
         </property>
@@ -66,6 +99,17 @@
       </item>
       <item>
        <widget class="QPushButton" name="btnRemove">
+        <property name="styleSheet">
+         <string notr="true">background-color: rgb(250, 78, 78);
+border-style: outset;
+border-width: 2px;
+border-radius: 10px;
+border-color: beige;
+font: bold 14px;
+color: white;
+min-width: 10em;
+padding: 6px;</string>
+        </property>
         <property name="text">
          <string>Remover</string>
         </property>
