--- a/subjectsdialog.ui
+++ b/subjectsdialog.ui
@@ -35,6 +35,17 @@
     </item>
     <item>
      <widget class="QPushButton" name="newBtn">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(11, 117, 250);
+border-style: outset;
+border-width: 2px;
+border-radius: 10px;
+border-color: beige;
+font: bold 14px;
+color: white;
+min-width: 10em;
+padding: 6px;</string>
+      </property>
       <property name="text">
        <string>Nueva Asignatura</string>
       </property>
@@ -42,6 +53,17 @@
     </item>
     <item>
      <widget class="QPushButton" name="changesBtn">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(11, 117, 250);
+border-style: outset;
+border-width: 2px;
+border-radius: 10px;
+border-color: beige;
+font: bold 14px;
+color: white;
+min-width: 10em;
+padding: 6px;</string>
+      </property>
       <property name="text">
        <string>Modificar Carga Horaria</string>
       </property>
@@ -49,6 +71,17 @@
     </item>
     <item>
      <widget class="QPushButton" name="removeBtn">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(250, 78, 78);
+border-style: outset;
+border-width: 2px;
+border-radius: 10px;
+border-color: beige;
+font: bold 14px;
+color: white;
+min-width: 10em;
+padding: 6px;</string>
+      </property>
       <property name="text">
        <string>Quitar Asignatura</string>
       </property>
