--- a/availabilitycheckview.ui
+++ b/availabilitycheckview.ui
@@ -49,6 +49,17 @@
     </item>
     <item>
      <widget class="QPushButton" name="btnExit">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(250, 78, 78);
+border-style: outset;
+border-width: 2px;
+border-radius: 10px;
+border-color: beige;
+font: bold 14px;
+color: white;
+min-width: 10em;
+padding: 6px;</string>
+      </property>
       <property name="text">
        <string>Salir</string>
       </property>
