--- a/newassignmentdialog.ui
+++ b/newassignmentdialog.ui
@@ -33,9 +33,20 @@
     <rect>
      <x>30</x>
      <y>60</y>
-     <width>171</width>
-     <height>25</height>
+     <width>176</width>
+     <height>41</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(11, 117, 250);
+border-style: outset;
+border-width: 2px;
+border-radius: 10px;
+border-color: beige;
+font: bold 14px;
+color: white;
+min-width: 10em;
+padding: 6px;</string>
    </property>
    <property name="text">
     <string>Asignar</string>
@@ -46,9 +57,20 @@
     <rect>
      <x>210</x>
      <y>60</y>
-     <width>171</width>
-     <height>25</height>
+     <width>176</width>
+     <height>41</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(250, 78, 78);
+border-style: outset;
+border-width: 2px;
+border-radius: 10px;
+border-color: beige;
+font: bold 14px;
+color: white;
+min-width: 10em;
+padding: 6px;</string>
    </property>
    <property name="text">
     <string>Salir</string>
