Added styles for grids

--- a/assignmentsDialog.ui
+++ b/assignmentsDialog.ui
@@ -25,6 +25,13 @@
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <widget class="QTableWidget" name="grdAssignments">
+      <property name="styleSheet">
+       <string notr="true">QHeaderView::section {
+    background-color: rgb(11, 117, 250);
+    height: 32px;
+	border-bottom-style: dotted;
+}</string>
+      </property>
       <property name="selectionMode">
        <enum>QAbstractItemView::SingleSelection</enum>
       </property>
