--- a/availabilitycheckview.ui
+++ b/availabilitycheckview.ui
@@ -45,7 +45,15 @@
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
-     <widget class="QTableWidget" name="grdAvailability"/>
+     <widget class="QTableWidget" name="grdAvailability">
+      <property name="styleSheet">
+       <string notr="true">QHeaderView::section {
+    background-color: rgb(11, 117, 250);
+    height: 32px;
+	border-bottom-style: dotted;
+}</string>
+      </property>
+     </widget>
     </item>
     <item>
      <widget class="QPushButton" name="btnExit">
