--- a/professorsdialog.ui
+++ b/professorsdialog.ui
@@ -27,6 +27,13 @@
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
        <widget class="QTableWidget" name="grdProfessors">
+        <property name="styleSheet">
+         <string notr="true">QHeaderView::section {
+    background-color: rgb(11, 117, 250);
+    height: 32px;
+	border-bottom-style: dotted;
+}</string>
+        </property>
         <property name="selectionBehavior">
          <enum>QAbstractItemView::SelectRows</enum>
         </property>
