--- a/subjectsdialog.ui
+++ b/subjectsdialog.ui
@@ -28,6 +28,13 @@
    <layout class="QVBoxLayout" name="verticalLayout_2">
     <item>
      <widget class="QTableWidget" name="grdSubjects">
+      <property name="styleSheet">
+       <string notr="true">QHeaderView::section {
+    background-color: rgb(11, 117, 250);
+    height: 32px;
+	border-bottom-style: dotted;
+}</string>
+      </property>
       <property name="selectionBehavior">
        <enum>QAbstractItemView::SelectRows</enum>
       </property>
