Changed font in labels

--- a/availabilitycheckview.ui
+++ b/availabilitycheckview.ui
@@ -24,8 +24,14 @@
    </property>
    <property name="font">
     <font>
-     <pointsize>13</pointsize>
+     <pointsize>-1</pointsize>
+     <weight>75</weight>
+     <italic>false</italic>
+     <bold>true</bold>
     </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: bold 18px;</string>
    </property>
    <property name="text">
     <string>Profesor</string>
