--- a/coloringdialog.ui
+++ b/coloringdialog.ui
@@ -108,11 +108,14 @@ padding: 6px;</string>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>60</x>
+      <x>30</x>
       <y>260</y>
-      <width>161</width>
-      <height>17</height>
+      <width>191</width>
+      <height>20</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: bold 14px;</string>
     </property>
     <property name="text">
      <string>Carga horaria semanal:</string>
