--- a/newProfessordialog.ui
+++ b/newProfessordialog.ui
@@ -18,9 +18,12 @@
     <rect>
      <x>160</x>
      <y>90</y>
-     <width>111</width>
+     <width>121</width>
      <height>17</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: bold 14px;</string>
    </property>
    <property name="text">
     <string>Disponibilidad</string>
@@ -104,6 +107,9 @@ padding: 6px;</string>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <widget class="QLabel" name="lblName">
+      <property name="styleSheet">
+       <string notr="true">font: bold 14px;</string>
+      </property>
       <property name="text">
        <string>Nombre:</string>
       </property>
