--- a/subjectinputdialog.ui
+++ b/subjectinputdialog.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>241</width>
+    <width>242</width>
     <height>127</height>
    </rect>
   </property>
@@ -64,6 +64,9 @@ padding: 6px;</string>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
        <widget class="QLabel" name="label">
+        <property name="styleSheet">
+         <string notr="true">font: bold 13px;</string>
+        </property>
         <property name="text">
          <string>Nombre de la Materia:</string>
         </property>
@@ -78,6 +81,9 @@ padding: 6px;</string>
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <item>
        <widget class="QLabel" name="label_2">
+        <property name="styleSheet">
+         <string notr="true">font: bold 13px;</string>
+        </property>
         <property name="text">
          <string>Carga horaria semanal:</string>
         </property>
