Changes in buttons stylesheets

--- a/assignmentsDialog.ui
+++ b/assignmentsDialog.ui
@@ -45,15 +45,32 @@
       <item>
        <widget class="QPushButton" name="btnNew">
         <property name="styleSheet">
-         <string notr="true">background-color: rgb(11, 117, 250);
-border-style: outset;
-border-width: 2px;
-border-radius: 10px;
-border-color: beige;
-font: bold 14px;
-color: white;
-min-width: 10em;
-padding: 6px;</string>
+         <string notr="true">QPushButton {
+      background-color: rgb(11, 117, 250);
+	  border-style: outset;
+	  border-width: 2px;
+	  border-radius: 10px;
+	  border-color: beige;
+	  font: bold 14px;
+	  color: white;
+	  min-width: 10em;
+	  padding: 6px;
+ }
+
+
+QPushButton:hover:!pressed
+{
+      background-color: rgb(3, 7, 128);
+	  border-style: outset;
+	  border-width: 2px;
+	  border-radius: 10px;
+	  border-color: beige;
+	  font: bold 14px;
+	  color: white;
+	  min-width: 10em;
+	  padding: 6px;
+}
+</string>
         </property>
         <property name="text">
          <string>Nueva asignacion</string>
@@ -63,15 +80,31 @@ padding: 6px;</string>
       <item>
        <widget class="QPushButton" name="btnDelete">
         <property name="styleSheet">
-         <string notr="true">background-color: rgb(250, 78, 78);
-border-style: outset;
-border-width: 2px;
-border-radius: 10px;
-border-color: beige;
-font: bold 14px;
-color: white;
-min-width: 10em;
-padding: 6px;</string>
+         <string notr="true">QPushButton {
+      background-color: rgb(250, 78, 78);
+	  border-style: outset;
+	  border-width: 2px;
+	  border-radius: 10px;
+	  border-color: beige;
+	  font: bold 14px;
+	  color: white;
+	  min-width: 10em;
+	  padding: 6px;
+ }
+
+
+QPushButton:hover:!pressed
+{
+      background-color: rgb(204, 0, 0);
+	  border-style: outset;
+	  border-width: 2px;
+	  border-radius: 10px;
+	  border-color: beige;
+	  font: bold 14px;
+	  color: white;
+	  min-width: 10em;
+	  padding: 6px;
+}</string>
         </property>
         <property name="text">
          <string>Eliminar</string>
