--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -30,15 +30,33 @@
      <item>
       <widget class="QPushButton" name="professorsBtn">
        <property name="styleSheet">
-        <string notr="true">background-color: rgb(11, 117, 250);
-border-style: outset;
-border-width: 2px;
-border-radius: 10px;
-border-color: beige;
-font: bold 14px;
-color: white;
-min-width: 10em;
-padding: 6px;</string>
+        <string notr="true">QPushButton {
+      background-color: rgb(11, 117, 250);
+	  border-style: outset;
+	  border-width: 2px;
+	  border-radius: 10px;
+	  border-color: beige;
+	  font: bold 14px;
+	  color: white;
+	  min-width: 10em;
+	  padding: 6px;
+ }
+
+
+QPushButton:hover:!pressed
+{
+      background-color: rgb(3, 7, 128);
+	  border-style: outset;
+	  border-width: 2px;
+	  border-radius: 10px;
+	  border-color: beige;
+	  font: bold 14px;
+	  color: white;
+	  min-width: 10em;
+	  padding: 6px;
+}
+
+</string>
        </property>
        <property name="text">
         <string>Profesores</string>
@@ -48,15 +66,32 @@ padding: 6px;</string>
      <item>
       <widget class="QPushButton" name="assignmentsBtn">
        <property name="styleSheet">
-        <string notr="true">background-color: rgb(11, 117, 250);
-border-style: outset;
-border-width: 2px;
-border-radius: 10px;
-border-color: beige;
-font: bold 14px;
-color: white;
-min-width: 10em;
-padding: 6px;</string>
+        <string notr="true">QPushButton {
+      background-color: rgb(11, 117, 250);
+	  border-style: outset;
+	  border-width: 2px;
+	  border-radius: 10px;
+	  border-color: beige;
+	  font: bold 14px;
+	  color: white;
+	  min-width: 10em;
+	  padding: 6px;
+ }
+
+
+QPushButton:hover:!pressed
+{
+      background-color: rgb(3, 7, 128);
+	  border-style: outset;
+	  border-width: 2px;
+	  border-radius: 10px;
+	  border-color: beige;
+	  font: bold 14px;
+	  color: white;
+	  min-width: 10em;
+	  padding: 6px;
+}
+</string>
        </property>
        <property name="text">
         <string>Asignaciones</string>
@@ -78,15 +113,31 @@ padding: 6px;</string>
      <item>
       <widget class="QPushButton" name="coloringBtn">
        <property name="styleSheet">
-        <string notr="true">background-color: rgb(56, 234, 41);
-border-style: outset;
-border-width: 2px;
-border-radius: 10px;
-border-color: beige;
-font: bold 14px;
-color: white;
-min-width: 10em;
-padding: 6px;</string>
+        <string notr="true">QPushButton {
+      background-color: rgb(56, 234, 41);
+	  border-style: outset;
+	  border-width: 2px;
+	  border-radius: 10px;
+	  border-color: beige;
+	  font: bold 14px;
+	  color: white;
+	  min-width: 10em;
+	  padding: 6px;
+ }
+
+
+QPushButton:hover:!pressed
+{
+      background-color: rgb(78, 154, 6);
+	  border-style: outset;
+	  border-width: 2px;
+	  border-radius: 10px;
+	  border-color: beige;
+	  font: bold 14px;
+	  color: white;
+	  min-width: 10em;
+	  padding: 6px;
+}</string>
        </property>
        <property name="text">
         <string>Armar Horario</string>
@@ -96,15 +147,32 @@ padding: 6px;</string>
      <item>
       <widget class="QPushButton" name="subjectsBtn">
        <property name="styleSheet">
-        <string notr="true">background-color: rgb(11, 117, 250);
-border-style: outset;
-border-width: 2px;
-border-radius: 10px;
-border-color: beige;
-font: bold 14px;
-color: white;
-min-width: 10em;
-padding: 6px;</string>
+        <string notr="true">QPushButton {
+      background-color: rgb(11, 117, 250);
+	  border-style: outset;
+	  border-width: 2px;
+	  border-radius: 10px;
+	  border-color: beige;
+	  font: bold 14px;
+	  color: white;
+	  min-width: 10em;
+	  padding: 6px;
+ }
+
+
+QPushButton:hover:!pressed
+{
+      background-color: rgb(3, 7, 128);
+	  border-style: outset;
+	  border-width: 2px;
+	  border-radius: 10px;
+	  border-color: beige;
+	  font: bold 14px;
+	  color: white;
+	  min-width: 10em;
+	  padding: 6px;
+}
+</string>
        </property>
        <property name="text">
         <string>Asignaturas</string>
@@ -114,15 +182,31 @@ padding: 6px;</string>
      <item>
       <widget class="QPushButton" name="exitBtn">
        <property name="styleSheet">
-        <string notr="true">background-color:rgb(250, 78, 78);
-border-style: outset;
-border-width: 2px;
-border-radius: 10px;
-border-color: beige;
-font: bold 14px;
-color: white;
-min-width: 10em;
-padding: 6px;</string>
+        <string notr="true">QPushButton {
+      background-color: rgb(250, 78, 78);
+	  border-style: outset;
+	  border-width: 2px;
+	  border-radius: 10px;
+	  border-color: beige;
+	  font: bold 14px;
+	  color: white;
+	  min-width: 10em;
+	  padding: 6px;
+ }
+
+
+QPushButton:hover:!pressed
+{
+      background-color: rgb(204, 0, 0);
+	  border-style: outset;
+	  border-width: 2px;
+	  border-radius: 10px;
+	  border-color: beige;
+	  font: bold 14px;
+	  color: white;
+	  min-width: 10em;
+	  padding: 6px;
+}</string>
        </property>
        <property name="text">
         <string>Salir</string>
