--- a/newassignmentdialog.ui
+++ b/newassignmentdialog.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>431</width>
+    <width>440</width>
     <height>105</height>
    </rect>
   </property>
@@ -27,87 +27,6 @@
      <string>Profesor</string>
     </property>
    </item>
-  </widget>
-  <widget class="QPushButton" name="btnAssign">
-   <property name="geometry">
-    <rect>
-     <x>30</x>
-     <y>60</y>
-     <width>176</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">QPushButton {
-      background-color: rgb(11, 117, 250);
-	  border-style: outset;
-	  border-width: 2px;
-	  border-radius: 10px;
-	  border-color: beige;
-	  font: bold 14px;
-	  color: white;
-	  min-width: 10em;
-	  padding: 6px;
- }
-
-
-QPushButton:hover:!pressed
-{
-      background-color: rgb(3, 7, 128);
-	  border-style: outset;
-	  border-width: 2px;
-	  border-radius: 10px;
-	  border-color: beige;
-	  font: bold 14px;
-	  color: white;
-	  min-width: 10em;
-	  padding: 6px;
-}
-</string>
-   </property>
-   <property name="text">
-    <string>Asignar</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="btnExit">
-   <property name="geometry">
-    <rect>
-     <x>210</x>
-     <y>60</y>
-     <width>176</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">QPushButton {
-      background-color: rgb(250, 78, 78);
-	  border-style: outset;
-	  border-width: 2px;
-	  border-radius: 10px;
-	  border-color: beige;
-	  font: bold 14px;
-	  color: white;
-	  min-width: 10em;
-	  padding: 6px;
- }
-
-
-QPushButton:hover:!pressed
-{
-      background-color: rgb(204, 0, 0);
-	  border-style: outset;
-	  border-width: 2px;
-	  border-radius: 10px;
-	  border-color: beige;
-	  font: bold 14px;
-	  color: white;
-	  min-width: 10em;
-	  padding: 6px;
-}</string>
-   </property>
-   <property name="text">
-    <string>Salir</string>
-   </property>
   </widget>
   <widget class="QComboBox" name="cmbSubject">
    <property name="geometry">
@@ -141,6 +60,87 @@ QPushButton:hover:!pressed
      <string>Curso</string>
     </property>
    </item>
+  </widget>
+  <widget class="QWidget" name="">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>60</y>
+     <width>381</width>
+     <height>34</height>
+    </rect>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout">
+    <item>
+     <widget class="QPushButton" name="btnAssign">
+      <property name="styleSheet">
+       <string notr="true">QPushButton {
+      background-color: rgb(11, 117, 250);
+	  border-style: outset;
+	  border-width: 2px;
+	  border-radius: 10px;
+	  border-color: beige;
+	  font: bold 14px;
+	  color: white;
+	  min-width: 10em;
+	  padding: 6px;
+ }
+
+
+QPushButton:hover:!pressed
+{
+      background-color: rgb(3, 7, 128);
+	  border-style: outset;
+	  border-width: 2px;
+	  border-radius: 10px;
+	  border-color: beige;
+	  font: bold 14px;
+	  color: white;
+	  min-width: 10em;
+	  padding: 6px;
+}
+</string>
+      </property>
+      <property name="text">
+       <string>Asignar</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="btnExit">
+      <property name="styleSheet">
+       <string notr="true">QPushButton {
+      background-color: rgb(250, 78, 78);
+	  border-style: outset;
+	  border-width: 2px;
+	  border-radius: 10px;
+	  border-color: beige;
+	  font: bold 14px;
+	  color: white;
+	  min-width: 10em;
+	  padding: 6px;
+ }
+
+
+QPushButton:hover:!pressed
+{
+      background-color: rgb(204, 0, 0);
+	  border-style: outset;
+	  border-width: 2px;
+	  border-radius: 10px;
+	  border-color: beige;
+	  font: bold 14px;
+	  color: white;
+	  min-width: 10em;
+	  padding: 6px;
+}</string>
+      </property>
+      <property name="text">
+       <string>Salir</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
   </widget>
  </widget>
  <resources/>
