Changed button styles

--- a/newassignmentdialog.ui
+++ b/newassignmentdialog.ui
@@ -61,7 +61,7 @@
     </property>
    </item>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>30</x>
@@ -78,7 +78,7 @@
       background-color: rgb(11, 117, 250);
 	  border-style: outset;
 	  border-width: 2px;
-	  border-radius: 10px;
+	  border-radius: 15px;
 	  border-color: beige;
 	  font: bold 14px;
 	  color: white;
@@ -92,7 +92,7 @@ QPushButton:hover:!pressed
       background-color: rgb(3, 7, 128);
 	  border-style: outset;
 	  border-width: 2px;
-	  border-radius: 10px;
+	  border-radius: 15px;
 	  border-color: beige;
 	  font: bold 14px;
 	  color: white;
@@ -113,7 +113,7 @@ QPushButton:hover:!pressed
       background-color: rgb(250, 78, 78);
 	  border-style: outset;
 	  border-width: 2px;
-	  border-radius: 10px;
+	  border-radius: 15px;
 	  border-color: beige;
 	  font: bold 14px;
 	  color: white;
@@ -127,7 +127,7 @@ QPushButton:hover:!pressed
       background-color: rgb(204, 0, 0);
 	  border-style: outset;
 	  border-width: 2px;
-	  border-radius: 10px;
+	  border-radius: 15px;
 	  border-color: beige;
 	  font: bold 14px;
 	  color: white;
