--- a/coloringdialog.ui
+++ b/coloringdialog.ui
@@ -22,88 +22,6 @@
      <height>385</height>
     </rect>
    </property>
-   <widget class="QPushButton" name="colorBtn">
-    <property name="geometry">
-     <rect>
-      <x>120</x>
-      <y>330</y>
-      <width>176</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton {
-      background-color: rgb(230, 19, 249);
-	  border-style: outset;
-	  border-width: 2px;
-	  border-radius: 15px;
-	  border-color: beige;
-	  font: bold 14px;
-	  color: white;
-	  min-width: 10em;
-	  padding: 6px;
- }
-
-QPushButton:hover:!pressed
-{
-      background-color: rgb(189, 0, 174);
-	  border-style: outset;
-	  border-width: 2px;
-	  border-radius: 15px;
-	  border-color: beige;
-	  font: bold 14px;
-	  color: white;
-	  min-width: 10em;
-	  padding: 6px;
-}
-QPushButton:disabled {
-background-color:rgb(136, 138, 133);
-}</string>
-    </property>
-    <property name="text">
-     <string>Colorear</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="exitBtn">
-    <property name="geometry">
-     <rect>
-      <x>310</x>
-      <y>330</y>
-      <width>176</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton {
-      background-color: rgb(250, 78, 78);
-	  border-style: outset;
-	  border-width: 2px;
-	  border-radius: 15px;
-	  border-color: beige;
-	  font: bold 14px;
-	  color: white;
-	  min-width: 10em;
-	  padding: 6px;
- }
-
-
-QPushButton:hover:!pressed
-{
-      background-color: rgb(204, 0, 0);
-	  border-style: outset;
-	  border-width: 2px;
-	  border-radius: 15px;
-	  border-color: beige;
-	  font: bold 14px;
-	  color: white;
-	  min-width: 10em;
-	  padding: 6px;
-}</string>
-    </property>
-    <property name="text">
-     <string>Salir</string>
-    </property>
-   </widget>
    <widget class="QTableWidget" name="scheduleGrd">
     <property name="geometry">
      <rect>
@@ -139,7 +57,7 @@ QPushButton:hover:!pressed
      </property>
     </item>
    </widget>
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="lblLoad">
     <property name="geometry">
      <rect>
       <x>30</x>
@@ -158,7 +76,7 @@ QPushButton:hover:!pressed
    <widget class="QTextEdit" name="textEdit">
     <property name="geometry">
      <rect>
-      <x>230</x>
+      <x>220</x>
       <y>260</y>
       <width>51</width>
       <height>21</height>
@@ -172,6 +90,101 @@ p, li { white-space: pre-wrap; }
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt; &lt;/p&gt;
 &lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
+   </widget>
+   <widget class="QLabel" name="lblProcessing">
+    <property name="geometry">
+     <rect>
+      <x>220</x>
+      <y>290</y>
+      <width>91</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QWidget" name="">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>340</y>
+      <width>381</width>
+      <height>34</height>
+     </rect>
+    </property>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QPushButton" name="colorBtn">
+       <property name="styleSheet">
+        <string notr="true">QPushButton {
+      background-color: rgb(230, 19, 249);
+	  border-style: outset;
+	  border-width: 2px;
+	  border-radius: 15px;
+	  border-color: beige;
+	  font: bold 14px;
+	  color: white;
+	  min-width: 10em;
+	  padding: 6px;
+ }
+
+QPushButton:hover:!pressed
+{
+      background-color: rgb(189, 0, 174);
+	  border-style: outset;
+	  border-width: 2px;
+	  border-radius: 15px;
+	  border-color: beige;
+	  font: bold 14px;
+	  color: white;
+	  min-width: 10em;
+	  padding: 6px;
+}
+QPushButton:disabled {
+background-color:rgb(136, 138, 133);
+}</string>
+       </property>
+       <property name="text">
+        <string>Colorear</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="exitBtn">
+       <property name="styleSheet">
+        <string notr="true">QPushButton {
+      background-color: rgb(250, 78, 78);
+	  border-style: outset;
+	  border-width: 2px;
+	  border-radius: 15px;
+	  border-color: beige;
+	  font: bold 14px;
+	  color: white;
+	  min-width: 10em;
+	  padding: 6px;
+ }
+
+
+QPushButton:hover:!pressed
+{
+      background-color: rgb(204, 0, 0);
+	  border-style: outset;
+	  border-width: 2px;
+	  border-radius: 15px;
+	  border-color: beige;
+	  font: bold 14px;
+	  color: white;
+	  min-width: 10em;
+	  padding: 6px;
+}</string>
+       </property>
+       <property name="text">
+        <string>Salir</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </widget>
   </widget>
  </widget>
